[build-system]
requires = [
    "setuptools >= 45.1.0",
    "wheel >= 0.36.0"
]
build-backend = "setuptools.build_meta"

[tool.pylint]

    [tool.pylint.similarities]
    min-similarity-lines = 6

    [tool.pylint.typecheck]
    ignored-modules = [
        "gdb"
    ]

[tool.yapf]
based_on_style = "pep8"
column_limit = 100
split_before_named_assigns = false
