[metadata]
name = gdbmongo
description = GDB pretty printers and commands for debugging the MongoDB Server
long_description = file: README.rst
url = https://github.com/visemet/gdb-mongodb-server
maintainer = Max Hirschhorn
maintainer_email = max.hirschhorn@mongodb.com
license = Apache License, Version 2.0
license_files =
    LICENSE
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Database
    Topic :: Database :: Database Engines/Servers
    Topic :: Software Development :: Debuggers
platforms = linux
keywords = mongo, mongodb, gdb

[options]
zip_safe = False
packages = gdbmongo
install_requires =
python_requires = >=3.9
